<resources>
    <string name="app_name">Maths</string>
    <string name="action_settings">Settings</string>
    <string name="calculate">CALCULATE</string>
    <string name="of">of</string>
    <string name="enter_number">Enter Number</string>
    <string name="percentile">%</string>
    <string name="enter_percentage">Enter Percentage</string>
    <string name="zero">0</string>
    <string name="what_is">What is</string>
    <string name="autofill">Autofill</string>
    <string name="_0">0</string>
</resources>
