<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginTop="19dp"
        android:text="@string/_0"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="57dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/percentageText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:text="What is"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="171dp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/percentageText"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_toEndOf="@+id/numberText"
        android:layout_toRightOf="@+id/numberText"
        android:text="%"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="273dp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="186dp"
        android:layout_marginRight="186dp"
        android:text="@string/of"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="344dp" />


    <Button
        android:id="@+id/calcButton"
        android:layout_width="217dp"
        android:layout_height="48dp"

        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="424dp"
        android:background="#FFCC0000"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="541dp" />

    <EditText
        android:id="@+id/percentageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/enter_percentage"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/numberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/calcButton"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="288dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="numberDecimal" />


</RelativeLayout>